- Fixed checkbox alignment issues

--- a/RockWeb/Themes/Rock/Styles/_variables.less
+++ b/RockWeb/Themes/Rock/Styles/_variables.less
@@ -257,7 +257,7 @@
 
 
 @custom-control-indicator-size: 20px;
-@custom-control-indicator-offset: 1px;
+@custom-control-indicator-offset: 2px;
 
 //// Image Editor
 @imageeditor-bg: @photo-border;              // The background for the image editor roll-over. This control is used to upload images.
